objects/agf__ADM_Tag_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>agf__Assignment_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment Rule</label>
        <referenceTo>agf__ADM_Assignment_Rule__c</referenceTo>
        <relationshipLabel>Tag Assignments</relationshipLabel>
        <relationshipName>Tag_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Product_Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Tag</label>
        <referenceTo>agf__ADM_Product_Tag__c</referenceTo>
        <relationshipLabel>Tag Assignments</relationshipLabel>
        <relationshipName>Tag_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Record_Type__c</fullName>
        <label>Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Tag_Record_Type_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Tag Record Type Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Tag Assignment</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Tag Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tag Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>